--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@
       <div class="container">
         <h2>Contact Me</h2>
         <form
-          action="mailto:bestasaikri1998@gmail.com"
+          action="https://formspree.io/f/mvgggzog"
           method="post"
-          enctype="text/plain"
         >
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required />
