--- a/index.html
+++ b/index.html
@@ -28,14 +28,7 @@
       <div class="container">
         <h2>About Me</h2>
         <p>
-          I am a software developer with 3 years of experience in building SaaS
-          applications. I have strong skills in both front-end and back-end
-          technologies like HTML5, CSS3, JavaScript, React.js, Node.js,
-          Express.js, MySQL, CosmosDB, and MongoDB. I’ve deployed apps on Azure
-          App Services and worked with tools like Adobe XD, Power BI, Terraform,
-          Microsoft Fabric, and Azure DevOps. I also have experience with CI/CD
-          pipelines in Azure DevOps, running Terraform scripts, and developing
-          mobile apps using React Native.
+          I’m a software developer with 3 years of experience building and deploying SaaS applications using front-end and back-end technologies like React.js, Node.js, Express.js, MySQL, CosmosDB, and MongoDB. I have expertise in deploying on Azure App Services, creating CI/CD pipelines with Azure DevOps, and automating infrastructure with Terraform. Additionally, I’ve developed mobile apps with React Native and worked with tools like Adobe XD, PowerBI, and Microsoft Fabric. I’m passionate about leveraging modern technologies to build scalable solutions and continuously expand my skill set.
         </p>
       </div>
     </section>
