--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@
               </p>
             </a>
           </div>
+          <div class="portfolio-item">
+            <a href="https://github.com/gsaikrishna8/HopeBot.git">
+              <img
+                src="./images/hopebot.webp"
+                alt="Project 6"
+                class="project-image project-image-6"
+              />
+              <h3>Hopebot</h3>
+              <p>
+                HopeBot is an AI-powered chatbot designed to provide mental wellness support and motivation. It enables users to ask questions and receive real-time responses using OpenAI's ChatGPT API. The chatbot offers a seamless conversational experience with a clean React-based UI and a robust Node.js & Express.js backend.
+              </p>
+            </a>
+          </div>
         </div>
       </div>
     </section>
